--- a/templates/components/datatable/layout.js.twig
+++ b/templates/components/datatable/layout.js.twig
@@ -4,7 +4,7 @@ function checkAllDataTable(table, value) {
     if (value) {
         selectionMode = 'negative';
     }
-
+	oSelectedItems{{ oUIBlock.GetOption('sListId') }} =[];
     // Mark all the displayed items as check or unchecked depending on the value
     $(table).find(':checkbox[name^=selectObj]:not([disabled])').each(function () {
         var $currentCheckbox = $(this);
@@ -20,8 +20,10 @@ function checkAllDataTable(table, value) {
 
     if (value) {
         $(table).DataTable().rows().select();
+	    $('#btn_ok_{{ oUIBlock.GetOption('sTableId') }}').prop('disabled', false);
     } else {
         $(table).DataTable().rows({page: 'current'}).deselect();
+	    $('#btn_ok_{{ oUIBlock.GetOption('sTableId') }}').prop('disabled', true);
     }
 
     return true;
@@ -118,10 +120,10 @@ var oTable{{ oUIBlock.GetId() }} = $('#{{ oUIBlock.GetId() }}').DataTable({
             data: "",
             render: function (data, type, row) {
                 var oCheckboxElem =
-                        {% if oUIBlock.GetOption("select_mode") != "single" %}
+                {% if oUIBlock.GetOption("select_mode") != "single" %}
                     $('<span class="row_input"><input type="checkbox" class="selectList{{ oUIBlock.GetId() }}" name="selectObject[]" /></span>');
                 {% else %}
-                $('<span class="row_input"><input type="radio" class="selectList{{ oUIBlock.GetId() }}" name="selectObject[]" /></span>');
+                     $('<span class="row_input"><input type="radio" class="selectList{{ oUIBlock.GetId() }}" name="selectObject[]" /></span>');
                 {% endif %}
                 if (row.limited_access) {
                     oCheckboxElem.html('-');
@@ -172,103 +174,78 @@ var oTable{{ oUIBlock.GetId() }} = $('#{{ oUIBlock.GetId() }}').DataTable({
 
 {% if oUIBlock.GetOption("select_mode") is not empty %}
 {% if oUIBlock.GetOption("select_mode") != "single" %}
+console.warn('aa');
 oTable{{ oUIBlock.GetId() }}.off('select').on('select', function (oEvent, dt, type, indexes) {
-    var aData = oTable{{ oUIBlock.GetId() }}.rows(indexes).data().toArray();
-    // Checking input
-    $('#{{ oUIBlock.GetId() }} tr[role="row"].selected td:first-child input').prop('checked', true);
-    // Saving values in temp array
-    for (var i in aData) {
-        var iItemId = aData[i].id;
-        if (oSelectedItems{{ oUIBlock.GetOption('sListId') }}.indexOf(iItemId) === -1) {
-            oSelectedItems{{ oUIBlock.GetOption('sListId') }}.push(iItemId);
-        }
+	var aData = oTable{{ oUIBlock.GetId() }}.rows(indexes).data().toArray();
+	if( $(this).closest('.ibo-panel--body').find('[name=selectionMode]').val() === "negative")
+    {
+	     // Checking input
+	    $('#{{ oUIBlock.GetId() }} tr[role="row"].selected td:first-child input').prop('checked', true);
+	    // Saving values in temp array
+	    for (var i in aData) {
+		    var iItemId = aData[i].id;
+		    if (oSelectedItems{{ oUIBlock.GetOption('sListId') }}.indexOf(iItemId) > -1) {
+			    oSelectedItems{{ oUIBlock.GetOption('sListId') }}.splice(oSelectedItems{{ oUIBlock.GetOption('sListId') }}.indexOf(iItemId), 1);
+		    }
+	    }
+	    if (oSelectedItems{{ oUIBlock.GetOption('sListId') }}.length === oTable{{ oUIBlock.GetId() }}.page.info()["recordsTotal"] ) {
+		    $('#btn_ok_{{ oUIBlock.GetOption('sTableId') }}').prop('disabled', true);
+	    } else {
+		    $('#btn_ok_{{ oUIBlock.GetOption('sTableId') }}').prop('disabled', false);
+	    }
     }
-    if ((oSelectedItems{{ oUIBlock.GetOption('sListId') }}.length === oTable{{ oUIBlock.GetId() }}.page.info()["recordsTotal"] && $(this).closest('.ibo-panel--body').find('[name=selectionMode]').val() === "negative")) {
-        $('#btn_ok_{{ oUIBlock.GetOption('sTableId') }}').prop('disabled', true);
-    } else {
-        $('#btn_ok_{{ oUIBlock.GetOption('sTableId') }}').prop('disabled', false);
+	else {
+	     // Checking input
+	    $('#{{ oUIBlock.GetId() }} tr[role="row"].selected td:first-child input').prop('checked', true);
+	    // Saving values in temp array
+	    for (var i in aData) {
+		    var iItemId = aData[i].id;
+		    if (oSelectedItems{{ oUIBlock.GetOption('sListId') }}.indexOf(iItemId) === -1) {
+			    oSelectedItems{{ oUIBlock.GetOption('sListId') }}.push(iItemId);
+		    }
+	    }
+	    $('#btn_ok_{{ oUIBlock.GetOption('sTableId') }}').prop('disabled', false);
     }
 });
 
 oTable{{ oUIBlock.GetId() }}.off('deselect').on('deselect', function (oEvent, dt, type, indexes) {
-    var aData = oTable{{ oUIBlock.GetId() }}.rows(indexes).data().toArray();
+	var aData = oTable{{ oUIBlock.GetId() }}.rows(indexes).data().toArray();
 
-    // Checking input
-    $('#{{ oUIBlock.GetId() }} tr[role="row"]:not(.selected) td:first-child input').prop('checked', false);
-    // Saving values in temp array
-    for (var i in aData) {
-        var iItemId = aData[i].id;
-        if (oSelectedItems{{ oUIBlock.GetOption('sListId') }}.indexOf(iItemId) > -1) {
-            oSelectedItems{{ oUIBlock.GetOption('sListId') }}.splice(oSelectedItems{{ oUIBlock.GetOption('sListId') }}.indexOf(iItemId), 1);
-        }
-    }
-    if ((oSelectedItems{{ oUIBlock.GetOption('sListId') }}.length === 0 && $(this).closest('.ibo-panel--body').find('[name=selectionMode]').val() === "positive")) {
-        $('#btn_ok_{{ oUIBlock.GetOption('sTableId') }}').prop('disabled', true);
-    } else {
-        $('#btn_ok_{{ oUIBlock.GetOption('sTableId') }}').prop('disabled', false);
-    }
+	// Checking input
+	$('#{{ oUIBlock.GetId() }} tr[role="row"]:not(.selected) td:first-child input').prop('checked', false);
+	// Saving values in temp array
+	if ($(this).closest('.ibo-panel--body').find('[name=selectionMode]').val() === "negative") {
+		for (var i in aData) {
+			var iItemId = aData[i].id;
+			if (oSelectedItems{{ oUIBlock.GetOption('sListId') }}.indexOf(iItemId) === -1) {
+				oSelectedItems{{ oUIBlock.GetOption('sListId') }}.push(iItemId);
+			}
+		}
+		if (oSelectedItems{{ oUIBlock.GetOption('sListId') }}.length === oTable{{ oUIBlock.GetId() }}.page.info()["recordsTotal"]) {
+			$('#btn_ok_{{ oUIBlock.GetOption('sTableId') }}').prop('disabled', true);
+		} else {
+			$('#btn_ok_{{ oUIBlock.GetOption('sTableId') }}').prop('disabled', false);
+		}
+	} else {
+		for (var i in aData) {
+			var iItemId = aData[i].id;
+			if (oSelectedItems{{ oUIBlock.GetOption('sListId') }}.indexOf(iItemId) > -1) {
+				oSelectedItems{{ oUIBlock.GetOption('sListId') }}.splice(oSelectedItems{{ oUIBlock.GetOption('sListId') }}.indexOf(iItemId), 1);
+			}
+		}
+		if (oSelectedItems{{ oUIBlock.GetOption('sListId') }}.length === 0) {
+			$('#btn_ok_{{ oUIBlock.GetOption('sTableId') }}').prop('disabled', true);
+		} else {
+			$('#btn_ok_{{ oUIBlock.GetOption('sTableId') }}').prop('disabled', false);
+		}
+	}
 });
 {% else %}
-oTable{{ oUIBlock.GetId() }}.off('select').on('select', function (oEvent, dt, type, indexes) {
-    var aData = oTable{{ oUIBlock.GetId() }}.rows(indexes).data().toArray();
-    // Checking input
-    $('#{{ oUIBlock.GetId() }} tr[role="row"].selected td:first-child input').prop('checked', true);
-    // Saving values in temp array
-    for (var i in aData) {
-        var iItemId = aData[i].id;
-        if (oSelectedItems{{ oUIBlock.GetOption('sListId') }}.indexOf(iItemId) === -1) {
-            oSelectedItems{{ oUIBlock.GetOption('sListId') }}.push(iItemId);
-        }
-    }
-    if ((oSelectedItems{{ oUIBlock.GetOption('sListId') }}.length === oTable{{ oUIBlock.GetId() }}.page.info()["recordsTotal"] && $(this).closest('.ibo-panel--body').find('[name=selectionMode]').val() === "negative")) {
-        $('#btn_ok_{{ oUIBlock.GetOption('sListId') }}').prop('disabled', true);
-    } else {
-        $('#btn_ok_{{ oUIBlock.GetOption('sListId') }}').prop('disabled', false);
-    }
-});
-
-oTable{{ oUIBlock.GetId() }}.off('deselect').on('deselect', function (oEvent, dt, type, indexes) {
-    var aData = oTable{{ oUIBlock.GetId() }}.rows(indexes).data().toArray();
-
-    // Checking input
-    $('#{{ oUIBlock.GetId() }} tr[role="row"]:not(.selected) td:first-child input').prop('checked', false);
-    // Saving values in temp array
-    for (var i in aData) {
-        var iItemId = aData[i].id;
-        if (oSelectedItems{{ oUIBlock.GetOption('sListId') }}.indexOf(iItemId) > -1) {
-            oSelectedItems{{ oUIBlock.GetOption('sListId') }}.splice(oSelectedItems{{ oUIBlock.GetOption('sListId') }}.indexOf(iItemId), 1);
-        }
-    }
-    if ((oSelectedItems{{ oUIBlock.GetOption('sListId') }}.length === 0 && $(this).closest('.ibo-panel--body').find('[name=selectionMode]').val() === "positive")) {
-        $('#btn_ok_{{ oUIBlock.GetOption('sListId') }}').prop('disabled', true);
-    } else {
-        $('#btn_ok_{{ oUIBlock.GetOption('sListId') }}').prop('disabled', false);
-    }
-});
+	oTable{{ oUIBlock.GetId() }}.off('select').on('select', function (oEvent, dt, type, indexes) {
+	    $('#btn_ok_{{ oUIBlock.GetOption('sListId') }}').prop('disabled', false);
+	});
 {% endif %}
 {% endif %}
-
-// Handles submit button
-//$('#form_{{ oUIBlock.GetId() }} .form_buttons .form_btn_submit').off('click').on('click', function(oEvent){
-// Extracting value(s) to be send back to the source form
-{% if bMultipleSelect %}
-//var oData = {values: oSelectedItems};
-{% else %}
-/*var oData = {value: {}};
-var sItemId = Object.keys(oSelectedItems)[0];
-var sItemName = oSelectedItems[sItemId];
-
-oData.value[sItemId] = sItemName;*/
-{% endif %}
-
-// Triggering value setting on the source field
-//$('[data-form-path="{{ aSource.sFormPath }}"][data-field-id="{{ aSource.sFieldId }}"]').triggerHandler('set_current_value', oData);
-
-// Closing the modal
-{% if tIsModal is defined and tIsModal == true %}
-//$('#{{ sFormId }}').closest('.modal').modal('hide');
-{% endif %}
-//});
 
 $('#datatable_dlg_{{ oUIBlock.GetId() }}').dialog(
     {
