N°2847 - ActivityPanel: Rework for new UX in edition/creation - Hide main action buttons - Remove activity tab entry form - Send caselogs value with global form

--- a/templates/layouts/activity-panel/caselog-entry-form/layout.js.twig
+++ b/templates/layouts/activity-panel/caselog-entry-form/layout.js.twig
@@ -1,4 +1,5 @@
 $('#{{ oUIBlock.GetId() }}').caselog_entry_form({
-	target_tab: '{{ oUIBlocl.GetContainerTabType }}',
+	submit_mode: '{{ oUIBlock.GetSubmitMode() }}',
+	target_tab: '{{ oUIBlocl.GetContainerTabType() }}',
 	text_input_id: '{{ oUIBlock.GetTextInput().GetId()}}'
 });
