--- a/templates/pages/backoffice/itopwebpage/layout.html.twig
+++ b/templates/pages/backoffice/itopwebpage/layout.html.twig
@@ -9,9 +9,7 @@
 			{{ include('pages/backoffice/extension-blocks/banner.html.twig') }}
 			{{ render_block(aLayouts.oTopBar, {aPage: aPage}) }}
 		</div>
-		{{ include('pages/backoffice/extension-blocks/header.html.twig') }}
-		{{ render_block(aLayouts.oPageContent, {aPage: aPage}) }}
-		{{ include('pages/backoffice/extension-blocks/footer.html.twig') }}
+		{{ render_block(aLayouts.oPageContent, {aPage: aPage, aLayouts: aLayouts}) }}
 
 		{# TODO: Remove this when modal development is done #}
 		<div id="at_the_end">{{ aPage.sDeferredContent|raw }}</div>
