--- a/templates/pages/backoffice/extension-blocks/banner.html.twig
+++ b/templates/pages/backoffice/extension-blocks/banner.html.twig
@@ -1,3 +1,12 @@
-{% if aLayouts.sBanner is not empty %}
-	<div id="ibo-top-banner" data-role="ibo-top-banner">{{ aLayouts.sBanner|raw }}</div>
-{% endif %}
+{# @copyright   Copyright (C) 2010-2020 Combodo SARL #}
+{# @license     http://opensource.org/licenses/AGPL-3.0 #}
+{% apply spaceless %}
+
+	<div id="ibo-page-Banner" data-role="ibo-page-Banner">
+		{% if aLayouts.sBanner is not empty %}
+			{{ aLayouts.sBanner|raw }}
+		{% endif %}
+		{{ render_block(aLayouts.oBanner, {aPage: aPage}) }}
+	</div>
+
+{% endapply %}
