N°3123 - Fix breadcrumb for DisplayBlock(type: List)

--- a/templates/specific/displayblock/blocklist/layout.js.twig
+++ b/templates/specific/displayblock/blocklist/layout.js.twig
@@ -2,6 +2,6 @@
 {# @license     http://opensource.org/licenses/AGPL-3.0 #}
 {% apply spaceless %}
     {% if oUIBlock.GetParameter('sEventAttachedData') is not empty %}
-        $('body').trigger('update_history.itop', [{{ oUIBlock.GetParameter('sEventAttachedData') }}])
+        $('body').trigger('update_history.itop', [{{ oUIBlock.GetParameter('sEventAttachedData')|raw }}]);
     {% endif %}
 {% endapply %}
