N°2847 Add field additional content (eg. for bulk modify)

--- a/templates/components/field/layout.html.twig
+++ b/templates/components/field/layout.html.twig
@@ -16,4 +16,7 @@
     >
     <div class="ibo-field--label">{{ aParams.label|raw }}</div>
     <div class="ibo-field--value">{{ aParams.value|raw }}</div>
+	{% if (aParams.comments is not null) %}
+		{{ aParams.comments|raw }}
+	{% endif %}
 </div>
