Buttons component : add tooltip Note that we will do later on a pass on accessibility, so we might add as well a title attribute, or a aria-* attribute

--- a/templates/components/button/layout.html.twig
+++ b/templates/components/button/layout.html.twig
@@ -5,6 +5,7 @@
         name="{{ oUIBlock.GetName() }}"
         value="{{ oUIBlock.GetValue() }}"
         {% if oUIBlock.IsDisabled() is same as(true) %} disabled {% endif %}
+        {% if oUIBlock.GetTooltip() is not empty %} data-tooltip-content="{{ oUIBlock.GetTooltip() }}" {% endif %}
 >
     {% if oUIBlock.GetIconClass() is not empty %}
         <span class="ibo-button--icon {{ oUIBlock.GetIconClass() }}"></span>
