--- a/templates/specific/displayblock/blockchart/layout.html.twig
+++ b/templates/specific/displayblock/blockchart/layout.html.twig
@@ -1,7 +1,7 @@
 {# @copyright   Copyright (C) 2010-2020 Combodo SARL #}
 {# @license     http://opensource.org/licenses/AGPL-3.0 #}
 {% apply spaceless %}
-    <div style="height:250px;width:100%" class="dashboard_chart" id="my_chart_{{ oUIBlock.GetParameter('sId') }}{{ oUIBlock.GetParameter('iChartCounter') }}">
+    <div style="height:250px;width:100%" class="dashboard_chart" id="my_chart_{{ oUIBlock.sId }}{{ oUIBlock.iChartCounter }}">
         <div style="height:200px;line-height:200px;vertical-align:center;text-align:center;width:100%">
             <img src="../images/indicator.gif">
         </div>
