--- a/templates/specific/displayblock/blocklist/layout.html.twig
+++ b/templates/specific/displayblock/blocklist/layout.html.twig
@@ -2,18 +2,14 @@
 {# @license     http://opensource.org/licenses/AGPL-3.0 #}
 {% apply spaceless %}
 
-    {% if oUIBlock.GetParameter('bEmptySet') %}
+    {% if oUIBlock.bEmptySet or oUIBlock.bNotAuthorized %}
         <p>{{ 'UI:NoObjectToDisplay'|dict_s }}</p>
     {% endif %}
 
-    {% if oUIBlock.GetParameter('bNotAuthorized') %}
-        <p>{{ 'UI:NoObjectToDisplay'|dict_s }}</p>
-    {% endif %}
-
-    {% if oUIBlock.GetParameter('bCreateNew') %}
+    {% if oUIBlock.bCreateNew %}
         <p>
-            <a{{ oUIBlock.GetParameter('sLinkTarget') }} href="{{ oUIBlock.GetParameter('sAbsoluteUrlAppRoot') }}pages/UI.php?operation=new&class={{ oUIBlock.GetParameter('sClass') }}&{{ oUIBlock.GetParameter('sParams') }}{{ oUIBlock.GetParameter('sDefault') }}">
-                {{ 'UI:ClickToCreateNew'|dict_format(oUIBlock.GetParameter('sClassName')) }}
+            <a{{ oUIBlock.sLinkTarget }} href="{{ oUIBlock.sAbsoluteUrlAppRoot }}pages/UI.php?operation=new&class={{ oUIBlock.sClass }}&{{ oUIBlock.sParams }}{{ oUIBlock.sDefault }}">
+                {{ 'UI:ClickToCreateNew'|dict_format(oUIBlock.sClassName) }}
             </a>
         </p>
     {% endif %}
