--- a/templates/specific/displayblock/blocklist/layout.js.twig
+++ b/templates/specific/displayblock/blocklist/layout.js.twig
@@ -1,7 +1,7 @@
 {# @copyright   Copyright (C) 2010-2020 Combodo SARL #}
 {# @license     http://opensource.org/licenses/AGPL-3.0 #}
 {% apply spaceless %}
-    {% if oUIBlock.GetParameter('sEventAttachedData') is not empty %}
-        $('body').trigger('update_history.itop', [{{ oUIBlock.GetParameter('sEventAttachedData')|raw }}]);
+    {% if oUIBlock.sEventAttachedData is not empty %}
+        $('body').trigger('update_history.itop', [{{ oUIBlock.sEventAttachedData|raw }}]);
     {% endif %}
 {% endapply %}
