N°2629 Allow user to choose default expanded/collapsed toolbar for richtext editors

--- a/templates/base/components/input/richtext/layout.js.twig
+++ b/templates/base/components/input/richtext/layout.js.twig
@@ -1,1 +1,1 @@
-$('#{{ oUIBlock.GetId() }}').ckeditor(function() { /* callback code */ }, {'language': 'en', 'contentsLanguage' : 'en', 'extraPlugins' : 'disabler,codesnippet'});
+$('#{{ oUIBlock.GetId() }}').ckeditor(function() { /* callback code */ }, {{ oUIBlock.GetConfig()| raw }});
