N°2847 - Restore components/layouts SCSS files to keep matching SCSS conventions

--- a/css/backoffice/main.scss
+++ b/css/backoffice/main.scss
@@ -19,6 +19,8 @@
 @import "utils/all";
 @import "vendors/all";
 @import "base/all";
-@import "pages/all";
+@import "components/all";
+@import "layout/all";
 @import "application/all";
+@import "pages/all";
 @import "themes/all";
