--- a/templates/base/components/button/layout.html.twig
+++ b/templates/base/components/button/layout.html.twig
@@ -1,6 +1,10 @@
 <button id="{{ oUIBlock.GetId() }}"
         class="ibo-button ibo-is-{{ oUIBlock.GetActionType() }} ibo-is-{{ oUIBlock.GetColor() }} {{ oUIBlock.GetAdditionalCSSClass() }}"
-        data-role="ibo-button"
+        {% if oUIBlock.GetDataAttributes() %}
+                {% for sName, sValue in oUIBlock.GetDataAttributes() %}
+                        data-{{ sName }}="{{ sValue }}"
+                {% endfor %}
+        {% endif %}
         type="{{ oUIBlock.GetType() }}"
         name="{{ oUIBlock.GetName() }}"
         value="{{ oUIBlock.GetValue() }}"
