--- a/templates/base/components/datatable/layout.live.js.twig
+++ b/templates/base/components/datatable/layout.live.js.twig
@@ -1,5 +1,8 @@
 
 {% if oUIBlock.GetOption("select_mode") is not empty %}
 	var oSelectedItems{{ oUIBlock.GetOption('sListId') }} = [];
+	{% if oUIBlock.GetOption("sSelectedRows") is not empty %}
+		oSelectedItems{{ oUIBlock.GetOption('sListId') }} = {{ oUIBlock.GetOption('sSelectedRows')|raw }};
+	{% endif %}
 {% endif %}
 
