N°3537 run_query : replace main form by components

--- a/templates/base/components/input/inputwithlabel.html.twig
+++ b/templates/base/components/input/inputwithlabel.html.twig
@@ -1,4 +1,5 @@
 {% block iboInputLabel %}
-    <label for="{{ oUIBlock.GetId() }}">{{ oUIBlock.GetLabel() }}</label>
+	<label for="{{ oUIBlock.GetId() }}">{{ oUIBlock.GetLabel() }}</label>
+	{% if oUIBlock.HasBr() %}<br>{% endif %}
 	{{ render_block(oUIBlock.GetInput()) }}
 {% endblock %}
